# StereoCalibration_matlab2opencv

./: CMakeLists.txt  README.md  calculate_rectification.cpp
calib_result/: cam_left.yml  cam_right.yml  extrinsic.yml  left.yaml  result.yml  right.yaml
matlab/: image_rectify.m  matlab.mat  matlab2opencv.m  matlab2opencv.m~  matlab_calib_2_opencv.m  matlab_calib_2_opencv.m~
